 ^- Push04
 ^- Push16
 ^- Push17
 ^- Push27
 ^- Push32
 ^- Push34
 ^- Push42
 ^- Push44
 ^- Push60
 ^- Push61
 ^- Push63
 ^- Push69
- Push weapons no longer support autoaim.
- The push laser was made one tic slower, but bolts now travel over 1.5x as fast. This should easily help its role in long-ranged nudging of opponents trying to recover.

MAPS:
- Push11 now has both drone spawns and projectile blocking boundaries.
- Push19's been given the Presidential Treatment:
 ^ More efficient method of keeping players off the counter (an invisible 3D floor) end
 ^ Fixed the alignment of some pyramid light textures
 ^ Blue ring platforms are now fully lit and 125% wider
 ^ Raised ceilings above some 3D floors slightly, so they appear on the automap
 ^ Filled the large window in with glass.  The center pane remains open
 ^ Fountains now launch players up
- Push20's boundaries have been shortened by 2056 units.
- Push27 now has a drone spawn.
- Absolutely nothing was changed about Push28.
- Push30 no longer can teleport lasers into infinity.
- Push32 now has darker borders around the circles to indicate position.
- Push33's center mountains have been removed, and the mountains have been moved to the outer portion of the map. To address camping, there is now an ocean drift on the outside of the map--get thrown out there, and you'll start drifting away!
- Push34's platforms have been trimmed and the belts sped up.
- Push34 has many more spawnpoints now.
- Push35 no longer has player spawns outside of the play boundary.
- Push38's layout has been squeezed in a slight bit, for easier mobility.
- Push42's gravity now resets every time the map restarts.
- Push42's gravity will now always adjust by at least 10%.
- Push43's killfloor has had its depth increased, so it's no longer as easy to trip into it.
- Push46's skybox is no longer obscenely fuckhuge filesize.
- Push47's camp spots have been removed.
- Push47's miscolored water has been colored properly.